# glibretro

./: CMakeLists.txt  README.md  config.h.in  glib.pc.in
.github/workflows/: ci.yml
include/: glib.h  glibconfig.h
src/: CMakeLists.txt  gdate.c  gerror.c  giochannel.c  gmain.c  gmessages.c  gscanner.c  gstrfuncs.c  gstring.c  gthread-posix.c  gthread.c  gtree.c  gutils.c
unsupported/: Makefile  configure
